--- a/ssr-profile/package.json
+++ b/ssr-profile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modern-mf-example",
+  "name": "ssr-profile",
   "version": "0.1.0",
   "scripts": {
     "reset": "npx rimraf node_modules ./**/node_modules",
@@ -31,16 +31,16 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
     "@modern-js/app-tools": "2.65.1",
     "@modern-js/tsconfig": "2.65.1",
+    "@biomejs/biome": "1.9.4",
+    "typescript": "~5.7.3",
     "@types/jest": "~29.2.4",
     "@types/node": "~18.11.9",
     "@types/react": "^18.3.11",
     "@types/react-dom": "~18.3.1",
     "lint-staged": "~15.4.0",
-    "rimraf": "^6.0.1",
     "simple-git-hooks": "^2.11.1",
-    "typescript": "~5.7.3"
+    "rimraf": "^6.0.1"
   }
 }
