--- a/ssr-profile/tsconfig.json
+++ b/ssr-profile/tsconfig.json
@@ -9,6 +9,6 @@
       "@shared/*": ["./shared/*"]
     }
   },
-  "include": ["src", "shared", "config", "modern.config.ts", "./@mf-types"],
+  "include": ["src", "shared", "config", "modern.config.ts"],
   "exclude": ["**/node_modules"]
 }
